# replay_tool

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/: PLANS.md  runtime-cache-boundary.md  scenario-v2-execplan.md  ui-m8-productization.md
.agents/execplans/: devices-enumeration-ui.md  replay-monitor-session.md  scenario-device-target-editor.md  scenario-editor-basic-actions.md  scenario-editor-editable-draft.md  scenario-editor-route-editor.md  tc1014-runtime-foundation.md  trace-library-v2-asc-binary-cache.md  trace-streaming-replay.md  ui-m4-m5-closeout.md
.agents/superpowers/plans/: 2026-05-09-remove-settings-ui.md
.claude/skills/tool-ui-style/: SKILL.md
.codex/environments/: environment.toml
.codex/skills/tool-ui-style/: SKILL.md
TSMaster/Windows/Demo/: db_demo.py  flexray_demo.py  rbs_signal_wrie_read_demo.py  tsmaster_singal_write_read_demo.py
TSMaster/Windows/TSMasterApi/: __init__.py
docs/: README.md  architecture-design-guide.md  architecture.md  testing.md  tongxing-hardware-validation.md  ui-implementation-roadmap.md  ui-manual-validation.md  ui-style-guide.md  ui.md
docs/superpowers/plans/: 2026-05-10-flatten-scenario-editor.md  2026-05-10-ui-cohesion-plan.md
examples/: canfd2.asc  mock_canfd.json  sample.asc  tongxing_tc1014_canfd.json  tongxing_tc1014_four_channel_canfd.asc  tongxing_tc1014_four_channel_canfd.json
src/replay_tool/: __init__.py  cli.py
src/replay_tool/adapters/: __init__.py
src/replay_ui_qt/: __init__.py  app_context.py  main.py  main_window.py  tasks.py  theme.py
tests/: test_cli.py  test_project_store.py  test_runtime.py  test_scenario_and_planner.py  test_tongxing_adapter.py  test_trace_store.py  test_ui_smoke.py  test_ui_tasks.py  test_ui_view_models.py  test_ui_views.py  test_ui_widgets.py
(+76 files in other folders)
