[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "next-replay-tool"
version = "0.1.0"
description = "Hexagonal CAN/CANFD replay tool with Tongxing/TSMaster-first support."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
replay-tool = "replay_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/replay_tool"]
